--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,45 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Ngryd</title>
+  <title>Ingryd | Landing Page</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
   <app-root></app-root>
+  <!-- <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+</script>
+<script type="text/javascript">
+   (function(){
+      emailjs.init({
+        publicKey: "zr68_O1O-CDlQb_F_",
+      });
+   })();
+</script> -->
+<script type="module">
+  // Import the functions you need from the SDKs you need
+  // import { initializeApp } from "https://www.gstatic.com/firebasejs/11.8.1/firebase-app.js";
+  // import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.8.1/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  // const firebaseConfig = {
+  //   apiKey: "AIzaSyA-ASbcwq5V4OC3ZKbjQew4hjXHB63hhGw",
+  //   authDomain: "lmsingrydacademy.firebaseapp.com",
+  //   projectId: "lmsingrydacademy",
+  //   storageBucket: "lmsingrydacademy.firebasestorage.app",
+  //   messagingSenderId: "371328981050",
+  //   appId: "1:371328981050:web:1b2728020c8df98e733d03",
+  //   measurementId: "G-E7TQWLNZGB"
+  // };
+
+  // Initialize Firebase
+  // const app = initializeApp(firebaseConfig);
+  // const analytics = getAnalytics(app);
+</script>
 </body>
 </html>
